Added authenticity token to prevent CSRF attacks

--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,15 +1,10 @@
 <article>
   <h1 class="TodoPage-title">My To-do List</h1>
-    <form class="AddTodo" action = "/todos" method = "POST">
-      <input
-        class="AddTodo-text"
-        type="text"
-        name="todo_text"
-        placeholder="What's next?"
-      />
-      <input class="AddTodo-date" type="date" name="due_date" />
-      <input class="AddTodo-button" type="submit" value="Add"/>
-    </form>
+  <%= form_with(url: "/todos", method: "post", class: "AddTodo") do %>
+    <input class="AddTodo-text" type="text" name="todo_text" placeholder="What's next?"/>
+    <input class="AddTodo-date" type="date" name="due_date" />
+    <input class="AddTodo-button" type="submit" value="Add"/>
+  <% end %>
 
   <%= render partial: "todo-section", locals: {
                section_title: "Overdue",
